Fixed django startup in docker.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,14 @@ services:
       - ./.pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-  
+
   backend-app:
     container_name: upb-backend
     restart: on-failure
     build: .
+    command: "python project/manage.py runserver 0.0.0.0:8000"
     ports:
-      - 8000:8000
+      - "8000:8000"
     volumes:
       - .:/app
     depends_on:
