--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
+psycopg2-binary==2.9.9
 pycparser==2.21
 pytz==2023.3.post1
 sqlparse==0.4.4
-psycopg2==2.9.9
