--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,15 +13,30 @@ services:
       - ./.pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
 
   backend-app:
     container_name: upb-backend
     restart: on-failure
     build: .
-    command: "python project/manage.py runserver 0.0.0.0:8000"
+    command:
+      - /bin/sh
+      - -c
+      - |
+        python project/manage.py makemigrations
+        python project/manage.py migrate
+        python project/manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
     volumes:
       - .:/app
     depends_on:
+      db:
+        condition: service_healthy
+    links:
       - db
