--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.7
 cryptography==41.0.4  # Your version has priority
 Django==4.2.6  # Your version has priority
 djangorestframework==3.14.0
+django_ratelimit==4.1.0
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
