--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Pillow==9.2.0  # From external, no conflict
 PyJWT==2.6.0  # From external, no conflict
 python-dotenv==0.19.0  # From external, no conflict
 python3-openid==3.2.0  # From external, no conflict
+reportlab==4.0.7
 requests==2.28.1  # From external, no conflict
 requests-oauthlib==1.3.1  # From external, no conflict
 social-auth-app-django==5.0.0  # From external, no conflict
